<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Payme Clone</string>

    <!--    auth screen-->
    // language screen text
    <string name="mobile_banking">Mobile\nBanking</string>
    <string name="rus">Русский</string>
    <string name="uz">O\'zbekcha</string>
    <string name="eng">English</string>
    <string name="text_splash_payme">version %1$s</string>
    //sign up screen
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>

    //sign in screen
    <string name="sign_in">Sign In</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="forgot_password">Forgot password!</string>
    //pincode screen
    <string name="enter_the_pin_code">Enter the PIN code</string>
    <string name="enter_new_password">Enter a new password</string>

    //verify screen
    <string name="ready">Ready</string>
    <string name="verify_text">Enter the verification code</string>
    <string name="stranger_device">Stranger device</string>
    <string name="text_phone_number">Code sent to number\n</string>
    <string name="code">code</string>

    //police
    <string name="terms_of_use">Terms of use</string>
    <string name="to_accept">Accept</string>
    <string name="i_agree_to_all_terms">I agree to all terms.</string>
    <string name="polise">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in someform, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>


    //not connection screen
    <string name="not_connection">There is no connection\n to the server</string>
    <string name="connect_text">Check your internet \n connection and try again</string>
    //finger screen
    <string name="text_turn_on">Turn on</string>
    <string name="text_finger_print">Fingerprint protection</string>
    <string name="text_finger_print_description">In order not to enter the PIN code every time, you can enable fingerprint login</string>

    // auth..................

    //splash screen
    <string name="created">Created by Alimardon.\n GITA Academy of Programmers</string>

    //intro screen
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    //intro screen
    <!--    auth screen-->

    <!--    main screen-->
    // tab navigation text
    <string name="basic">Basic</string>
    <string name="transfer">Transfer</string>
    <string name="payment">Payment</string>
    <string name="services">Services</string>
    <string name="cashFlow">Cash flow</string>
    <string name="total_balance">Total balance</string>
    <string name="sum">sum</string>
    <string name="my_cards">My cards</string>
    <string name="payme_go">Payme Go</string>
    <string name="qr_payment">QR payment</string>
    <string name="transfers">Transfers</string>
    <string name="money_transfer">Money transfer</string>
    <string name="ask_for_money">Ask for money</string>
    <string name="more">More</string>
    <string name="todo">TODO</string>
    <string name="add_a_card">Add a card</string>
    <string name="card_number">Card number</string>
    <string name="validity_period">Validity period</string>
    <string name="the_name_of_the_card">Card name</string>
    <string name="to_accept_a_transfer_from_this_card">To accept a transfer from this card</string>
    <string name="share_QR">Share QR</string>
    <string name="share_the_link">Share link</string>
    <string name="copy_link">Copy link</string>

    <string name="block">Block</string>
    <string name="deposit_card">Deposit card</string>
    <string name="card_settings">Card settings</string>
    <string name="delete">Delete</string>


    <string name="close">Close</string>


    <string name="setting">Settings</string>
    <string name="themes">Themes</string>
    <string name="share">Share</string>
    <string name="help">Help Center</string>
    <string name="private_link">shaxsiy havola</string>

    //setting string
    <string name="profile">Profile</string>
    <string name="security">Security</string>
    <!--    main screen-->
</resources>