<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/basic"
        android:enabled="true"
        android:icon="@drawable/ic_tab_main"
        android:title="@string/basic" />
    <item
        android:id="@+id/transfer"
        android:enabled="true"
        android:icon="@drawable/ic_arrow"
        android:title="@string/transfer" />
    <item
        android:id="@+id/payment"
        android:enabled="true"
        android:icon="@drawable/ic_tab_payment"
        android:title="@string/payment" />
    <item
        android:id="@+id/services"
        android:enabled="true"
        android:icon="@drawable/ic_tab_services"
        android:title="@string/services" />
    <item
        android:id="@+id/cashFlow"
        android:enabled="true"
        android:icon="@drawable/ic_history_small"
        android:title="@string/cashFlow" />
</menu>