<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg_color"
    tools:context=".presentation.view.auth.screen.FingerScreen">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:padding="8dp"
        android:src="@drawable/ic_next2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/skip"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ingerprint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_finger_print"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView3"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView3"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/text_finger_print_description"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <TextView
        android:id="@+id/turnOn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/text_turn_on"
        android:textColor="@color/box_stroke_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>